--- a/flower.html
+++ b/flower.html
@@ -11,19 +11,19 @@
 
   <div class="content">
     <h1>Reasons I Love You 💖 + Flowers for my baby 🌷</h1>
-    <p style="margin-bottom:20px;">(Click the hearts to discover them 🌸)</p>
+    <p style="margin-bottom:20px;">(Maybe try clicking the hearts?🌸)</p>
 
     <div class="flowers-container">
       <img src="images/flowers.jpg" alt="Flowers" class="flowers-image">
 
       <!-- Spread hearts further apart and balanced -->
-      <div class="heart" data-side="left" style="top: 10%; left: 10%;"></div>
-      <div class="heart" data-side="left" style="top: 35%; left: 5%;"></div>
-      <div class="heart" data-side="left" style="top: 65%; left: 15%;"></div>
+      <div class="heart" data-side="left" style="top: 40%; left: 30%;"></div>
+      <div class="heart" data-side="left" style="top: 52%; left: 25%;"></div>
+      <div class="heart" data-side="left" style="top: 65%; left: 30%;"></div>
 
-      <div class="heart" data-side="right" style="top: 10%; right: 10%;"></div>
-      <div class="heart" data-side="right" style="top: 35%; right: 5%;"></div>
-      <div class="heart" data-side="right" style="top: 65%; right: 15%;"></div>
+      <div class="heart" data-side="right" style="top: 40%; right: 30%;"></div>
+      <div class="heart" data-side="right" style="top: 52%; right: 25%;"></div>
+      <div class="heart" data-side="right" style="top: 65%; right: 30%;"></div>
     </div>
 
     <button class="pretty-button continue" onclick="goTo('gallery.html')">Continue ➜</button>
